Update README.md
Updated README with improved formatting and instructions